# lightning-wire-msgs-derive-rs

./: Cargo.toml
base/: Cargo.toml
base/src/: any_wire_msg.rs  lib.rs  try_from.rs  wire_msg.rs
proc/: Cargo.toml
proc/src/: lib.rs
src/: any_wire_msg.rs  lib.rs  try_from.rs
